Fix bug : 368 – paginator should align center to the container – data should algin left the paginator

--- a/src/assets/examples/paginator-configurable/paginator-configurable.component.css
+++ b/src/assets/examples/paginator-configurable/paginator-configurable.component.css
@@ -8,9 +8,15 @@ mat-form-field {
 }
 .example-paginator-data {
   text-align: left;
+  margin-left: 14px;
 }
 
-.example-paginator-instance {
+.example-paginator-instance mat-paginator{
+  display: flex;
+}
+
+.example-paginator-wrapper {
   width: 396px;
-  text-align: left;
+  margin: 0 auto;
+  /* text-align: left; */
 }
